Fixed issue with white space to the right of screen when small screen width

--- a/src/app/pages/cv/cv.component.scss
+++ b/src/app/pages/cv/cv.component.scss
@@ -39,8 +39,9 @@
       display: flex;
       flex-direction: column;
       padding: 10px;
-      width: 1500px;
+      width: 100%;
       height: 300px;
+      flex-grow: 1;
       text-align: center;
       justify-content: center;
       align-items: center;
